// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Elements/Notification Error 1`] = `
<div
  className="p-10"
>
  <div
    className="fixed top-[86px] right-[1.5vw] z-[1000000] flex w-[28vw] shadow-black"
  >
    <div
      className="flex items-start rounded-lg font-bold w-full tracking-tighter leading-16 p-4 bg-white shadow-[0_0_5px_0_rgba(0,0,0,0.2)] text-bold-body-300 group:text-error-600"
    >
      <div
        className="mr-2"
      >
        <div
          style={
            Object {
              "height": 24,
              "width": 24,
            }
          }
        />
      </div>
      <div
        className="w-full"
      >
        <div>
          <p
            className="w-full text-error-600 text-bold-body-300"
            data-testid="txt"
          >
            <button
              className="float-right text-neutral-400 hover:opacity-60"
              onClick={[Function]}
            >
              <div
                style={
                  Object {
                    "height": undefined,
                    "width": 24,
                  }
                }
              />
            </button>
            Your critical message - make it short
          </p>
        </div>
        <p
          className="mt-2 !font-primary text-body-200"
          data-testid="txt"
        >
          Describe the event and give further instruction if needed, including links to other pages.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Notification Success 1`] = `
<div
  className="p-10"
>
  <div
    className="fixed top-[86px] right-[1.5vw] z-[1000000] flex w-[28vw] shadow-black"
  >
    <div
      className="flex items-start rounded-lg font-bold w-full tracking-tighter leading-16 p-4 bg-white shadow-[0_0_5px_0_rgba(0,0,0,0.2)] text-bold-body-300 group:text-success-600"
    >
      <div
        className="mr-2"
      >
        <div
          style={
            Object {
              "height": 24,
              "width": 24,
            }
          }
        />
      </div>
      <div
        className="w-full"
      >
        <div>
          <p
            className="w-full text-success-600 text-bold-body-300"
            data-testid="txt"
          >
            <button
              className="float-right text-neutral-400 hover:opacity-60"
              onClick={[Function]}
            >
              <div
                style={
                  Object {
                    "height": undefined,
                    "width": 24,
                  }
                }
              />
            </button>
            Success! Your notes were just saved!
          </p>
        </div>
        <p
          className="mt-2 !font-primary text-body-200"
          data-testid="txt"
        >
          Your notes were just saved!
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Notification Warning 1`] = `
<div
  className="p-10"
>
  <div
    className="fixed top-[86px] right-[1.5vw] z-[1000000] flex w-[28vw] shadow-black"
  >
    <div
      className="flex items-start rounded-lg font-bold w-full tracking-tighter leading-16 p-4 bg-white shadow-[0_0_5px_0_rgba(0,0,0,0.2)] text-bold-body-300 group:text-tertiary-600"
    >
      <div
        className="mr-2"
      >
        <div
          style={
            Object {
              "height": 24,
              "width": 24,
            }
          }
        />
      </div>
      <div
        className="w-full"
      >
        <div>
          <p
            className="w-full text-tertiary-600 text-bold-body-300"
            data-testid="txt"
          >
            <button
              className="float-right text-neutral-400 hover:opacity-60"
              onClick={[Function]}
            >
              <div
                style={
                  Object {
                    "height": undefined,
                    "width": 24,
                  }
                }
              />
            </button>
            Your polygon has been edited. Run a validation check.
          </p>
        </div>
        <p
          className="mt-2 !font-primary text-body-200"
          data-testid="txt"
        >
          This is required for site approval.
        </p>
      </div>
    </div>
  </div>
</div>
`;
